--- a/_config.yml
+++ b/_config.yml
@@ -5,55 +5,22 @@
 # If you need help with YAML syntax, here are some quick references for you: 
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
-
-title: fastpages
-description: An easy to use blogging platform with support for Jupyter Notebooks.
+title: Sajjad Ayoubi's Blog 😉
+description:  
 github_username: sajjjadayobi
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "blog"
-
-# OPTIONAL: override baseurl and url if using a custom domain
-# Note: leave out the trailing / from this value. 
 url: "https://sajjjadayobi.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-
-###########################################################
-#########  Special Instructions for baseurl ###############
-#
-#### Scenario One: If you do not have a Custom Domain #####
-#    -  if you are not using a custom domain, the baseurl *must* be set to your repo name
-# 
-####  Scenario Two: If you have a Custom Domain #####
-# 1. If your domain does NOT have a subpath, this leave this value as ""
-# 2. If your domain does have a subpath, you must preceed the value with a / and NOT have a / at the end.  
-#      For example: 
-#           "" is valid
-#           "/blog"        is valid
-#            "/blog/site/" is invalid  ( / at the end)
-#            "/blog/site"  is valid
-#            "blog/site"   is invalid  ( because doesn't begin with a /)
-#
-# 3. You must replace the parameter `baseurl` in _action_files/settings.ini with the same value as you set here but WITHOUT QUOTES.
-#
 baseurl: "/blog" # the subpath of your site, e.g. "/blog".
-
-# Github and twitter are optional:
-minima:
-  social_links:
-    twitter: fastdotai
-    github: fastai
 
 # Set this to true to get LaTeX math equation support
 use_math: 
-
 # Set this to true to display the summary of your blog post under your title on the Home page.
 show_description: true
-
 # Set this to true to display image previews on home page, if they exist
-show_image: false
-
+show_image: true
 # Set this to true to turn on annotations with hypothes.is (https://web.hypothes.is/)
 annotations: false
-
 # Set this to true to display tags on each post
 show_tags: true
 
@@ -71,13 +38,13 @@ include:
 
 # This specifies what badges are turned on by default for notebook posts.
 default_badges:
-  github: true
-  binder: true
+  github: false
+  binder: false
   colab: true
 
 # Escape HTML in post descriptions
 html_escape:
-  description: false
+  description: true
 
 # Everything below here should be left alone. Modifications may break fastpages
 future: true
@@ -97,7 +64,7 @@ plugins:
 
 # See https://jekyllrb.com/docs/pagination/
 # For pagination to work, you cannot have index.md at the root of your repo, instead you must rename this file to index.html
-paginate: 15
+paginate: 7
 paginate_path: /page:num/
 
 remote_theme: jekyll/minima
@@ -116,7 +83,23 @@ kramdown:
   hard_wrap: false
   syntax_highlighter: rouge
 
+remote_theme: jekyll/minima  
+author:
+  name: Sajjad Ayoubi
+  email: "sadeveloper360@gmail.com"
+  bio: Deep Learning Practitioner
+
+minima:
+#   skin: classic
+  social_links:
+    twitter: ayoubi_sajjad
+    github: sajjjadayobi
+
+# header_pages:
+ #  - about.md
+ # - portfolio.md
+
 # to limit size of xml as it can grow quite large.
 feed:
-  posts_limit: 5 #default posts_limit: 10
+  posts_limit: 7 #default posts_limit: 10
   excerpt_only: true
